--- a/Spread & Rest/index.html
+++ b/Spread & Rest/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="app.js"></script>
+    <!-- <script src="app.js"></script> -->
+    <script src="rest.js"></script>
     
 </body>
 </html>
