--- a/DOM/Keyboard Event/index.html
+++ b/DOM/Keyboard Event/index.html
@@ -5,16 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h3>Generate a random color</h3>
-    <br/>
-    <button id="btn-project1" class="glow-on-hover" type="button">Generate Color</button>
-</div>
-    <br/>
-    <div>This is your new color</div>
+    <input placeholder="Type something" ype="text" name="" id="">
+    <button>Click Here!!!!</button>
     <script src="app.js"></script>
 </body>
 
