--- a/DOM/Activity 2 (Todo List)/index.html
+++ b/DOM/Activity 2 (Todo List)/index.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+        <h1>Todo App</h1>
+        <input placeholder="Enter your task" type="text" name="" id="input">
+        <button>Add Task</button>
+        <ul>
+            <li>Eat <button class="delete">delete</button></li>
+            <li>Sleep <button class="delete">delete</button></li>
+        </ul>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
