--- a/Axios/index.html
+++ b/Axios/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
 
 <body>
+    <h1>Cat Facts</h1>
+    <button>Get Facts</button>
+    <img id="result" />
     <script src="app.js"></script>
 </body>
 
